# ferrotunnel

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  Makefile  README.md  REVIEW_AND_FEEDBACK.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.yml  rustfmt.toml
.github/workflows/: benchmarks.yml  ci.yml  codeql.yml  nightly-fuzz.yml  publish.yml  release-assets.yml
benches/: Cargo.toml  e2e_tunnel.rs  full_stack.rs  latency.rs  lib.rs  tcp_throughput.rs  throughput.rs
docs/: ARCHITECTURE.md  benchmark.md  deployment.md  plugin-development.md  security.md  troubleshooting.md
examples/: Cargo.toml  embedded_client.rs  lib.rs  tls_config.rs
examples/advanced/: tls_config.rs
examples/basic/: embedded_client.rs  grpc_tunnel.rs
examples/operational/: server_graceful_shutdown.rs
examples/plugins/: custom_plugin.rs  ip_blocklist.rs  plugin_chain.rs
examples/production/: graceful_shutdown.rs  with_metrics.rs
examples/use-cases/: dev_tunnel.rs  webhook_receiver.rs
ferrotunnel/: Cargo.toml  README.md
ferrotunnel-cli/: Cargo.toml  README.md
ferrotunnel-cli/src/: main.rs  middleware.rs
ferrotunnel-cli/src/commands/: client.rs  mod.rs  server.rs  version.rs
ferrotunnel-client/: Cargo.toml  README.md
ferrotunnel-client/src/: main.rs  middleware.rs
ferrotunnel-common/: Cargo.toml  README.md
ferrotunnel-common/src/: config.rs  constants.rs  error.rs  lib.rs
ferrotunnel-core/: Cargo.toml  README.md
ferrotunnel-core/benches/: batched_sender.rs  multiplexer.rs  transport.rs
ferrotunnel-core/src/: auth.rs  lib.rs  rate_limit.rs  reconnect.rs  resource_limits.rs
ferrotunnel-core/src/stream/: bytes_pool.rs  mod.rs  multiplexer.rs  pool.rs
ferrotunnel-core/src/transport/: batched_sender.rs  frame_transport.rs  mod.rs  socket_tuning.rs  tcp.rs  tcp_frame.rs  tls.rs
ferrotunnel-core/src/tunnel/: client.rs  mod.rs  server.rs  session.rs
ferrotunnel-http/: Cargo.toml  README.md
ferrotunnel-http/src/: ingress.rs  lib.rs  pool.rs  proxy.rs  tcp_ingress.rs
ferrotunnel-observability/: Cargo.toml  README.md
ferrotunnel-observability/src/: lib.rs  metrics.rs  tracing.rs
ferrotunnel-observability/src/dashboard/: events.rs  handlers.rs  mod.rs  models.rs  server.rs
ferrotunnel-observability/src/dashboard/static/: app.js  index.html  style.css
ferrotunnel-plugin/: Cargo.toml  README.md
ferrotunnel-plugin/examples/: header_filter.rs  hello_plugin.rs  ip_blocklist.rs
ferrotunnel-plugin/src/: lib.rs  registry.rs  traits.rs
ferrotunnel-plugin/src/builtin/: auth.rs  circuit_breaker.rs  logger.rs  mod.rs  rate_limit.rs
ferrotunnel-protocol/: Cargo.toml  README.md
ferrotunnel-protocol/benches/: codec.rs
ferrotunnel-protocol/fuzz/: Cargo.toml  README.md
ferrotunnel-protocol/fuzz/fuzz_targets/: codec_decode.rs  frame_validation.rs
ferrotunnel-protocol/src/: codec.rs  constants.rs  frame.rs  lib.rs  validation.rs
ferrotunnel-server/: Cargo.toml  README.md
ferrotunnel-server/src/: main.rs
ferrotunnel/src/: client.rs  config.rs  lib.rs  server.rs
ferrotunnel/tests/integration/: concurrent_test.rs  mod.rs  tls_test.rs  tunnel_test.rs
scripts/: benchmark.sh  publish.sh  test-dashboard.sh  test-docker.sh  test-examples.sh  test-plugins.sh  test-tunnel.sh  yank-all.sh
tests/: Cargo.toml  lib.rs
tests/integration/: error_test.rs  grpc_test.rs  mod.rs  multi_client_test.rs  plugin_test.rs  tcp_test.rs  tls_test.rs  websocket_test.rs
tools/loadgen/: Cargo.toml  README.md
tools/loadgen/src/: main.rs
tools/profiler/: README.md  profile-codec.sh  profile-memory.sh  profile-server.sh
tools/soak/: Cargo.toml  README.md
tools/soak/src/: main.rs
