[package]
name = "ferrotunnel-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

# This crate exists only to provide examples
[lib]
path = "lib.rs"

[[example]]
name = "embedded_server"
path = "embedded_server.rs"

[[example]]
name = "embedded_client"
path = "embedded_client.rs"

[[example]]
name = "custom_plugin"
path = "custom_plugin.rs"

[[example]]
name = "tls_config"
path = "tls_config.rs"

[[example]]
name = "auto_reconnect"
path = "auto_reconnect.rs"

[[example]]
name = "multi_tunnel"
path = "multi_tunnel.rs"

[dependencies]
# Core ferrotunnel library
ferrotunnel = { path = "../ferrotunnel" }

# Plugin system (for custom_plugin example)
ferrotunnel-plugin = { path = "../ferrotunnel-plugin" }

# HTTP types (for plugin examples)
http = "1.4.0"

# Async trait (for Plugin implementations)
async-trait = "0.1"

# Runtime and logging
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
