[package]
name = "ferrotunnel-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

# This crate exists only to provide examples
[lib]
path = "lib.rs"

# ============================================================================
# Basic Examples - Getting started with FerroTunnel
# ============================================================================

[[example]]
name = "embedded_server"
path = "basic/embedded_server.rs"

[[example]]
name = "embedded_client"
path = "basic/embedded_client.rs"

[[example]]
name = "auto_reconnect"
path = "basic/auto_reconnect.rs"

# Plugin Examples
[[example]]
name = "custom_plugin"
path = "plugins/custom_plugin.rs"

[[example]]
name = "hello_plugin"
path = "plugins/hello_plugin.rs"

[[example]]
name = "header_filter"
path = "plugins/header_filter.rs"

[[example]]
name = "ip_blocklist"
path = "plugins/ip_blocklist.rs"

# ============================================================================
# Advanced Examples - Production configurations and patterns
# ============================================================================

[[example]]
name = "tls_config"
path = "advanced/tls_config.rs"

[[example]]
name = "multi_tunnel"
path = "advanced/multi_tunnel.rs"

[dependencies]
# Core ferrotunnel library
ferrotunnel = { path = "../ferrotunnel" }

# Plugin system (for plugin examples)
ferrotunnel-plugin = { path = "../ferrotunnel-plugin" }

# HTTP types (for plugin examples)
http = "1.4.0"

# Async trait (for Plugin implementations)
async-trait = "0.1"

# Runtime and logging
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
