[package]
name = "ferrotunnel-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

# This crate exists only to provide examples
[lib]
path = "lib.rs"

# ============================================================================
# Basic Examples - Getting started with FerroTunnel
# ============================================================================

[[example]]
name = "embedded_server"
path = "basic/embedded_server.rs"

[[example]]
name = "embedded_client"
path = "basic/embedded_client.rs"

[[example]]
name = "auto_reconnect"
path = "basic/auto_reconnect.rs"

# Plugin Examples
[[example]]
name = "custom_plugin"
path = "plugins/custom_plugin.rs"

[[example]]
name = "header_filter"
path = "plugins/header_filter.rs"

[[example]]
name = "ip_blocklist"
path = "plugins/ip_blocklist.rs"

[[example]]
name = "plugin_chain"
path = "plugins/plugin_chain.rs"

# Advanced Examples
[[example]]
name = "tls_config"
path = "advanced/tls_config.rs"

[[example]]
name = "multi_tunnel"
path = "advanced/multi_tunnel.rs"

# ============================================================================
# Production Examples - Production-ready configurations
# ============================================================================

[[example]]
name = "graceful_shutdown"
path = "production/graceful_shutdown.rs"

[[example]]
name = "with_metrics"
path = "production/with_metrics.rs"

# ============================================================================
# Use-Case Examples - Common use cases
# ============================================================================

[[example]]
name = "webhook_receiver"
path = "use-cases/webhook_receiver.rs"

[[example]]
name = "dev_tunnel"
path = "use-cases/dev_tunnel.rs"

[dependencies]
# Core ferrotunnel library
ferrotunnel = { path = "../ferrotunnel" }

# Plugin system (for plugin examples)
ferrotunnel-plugin = { path = "../ferrotunnel-plugin" }

# HTTP types (for plugin examples)
http = "1.4.0"

# Async trait (for Plugin implementations)
async-trait = "0.1"

# Runtime and logging
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Using custom lints for examples - allow unwrap/expect for demonstration code
[lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
similar_names = "allow"
uninlined_format_args = "allow"
manual_let_else = "allow"
single_match_else = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
match_same_arms = "allow"
needless_continue = "allow"
ignored_unit_patterns = "allow"
unnecessary_literal_bound = "allow"
module_name_repetitions = "allow"
needless_borrows_for_generic_args = "allow"
# Allow unwrap/expect in examples for clarity
unwrap_used = "allow"
expect_used = "allow"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
