[package]
name = "ferrotunnel-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FerroTunnel Client binary"

[dependencies]
ferrotunnel-core = { version = "0.9.0", path = "../ferrotunnel-core" }
ferrotunnel-http = { version = "0.9.0", path = "../ferrotunnel-http" }
ferrotunnel-common = { version = "0.9.0", path = "../ferrotunnel-common" }
ferrotunnel-observability = { workspace = true, features = ["dashboard"] }

tokio = { workspace = true }
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
# tracing-subscriber handled by ferrotunnel-observability
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
tower = { version = "0.4", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
bytes = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { workspace = true }
axum = { version = "0.7", features = ["http1", "json", "matched-path"] }

[lints]
workspace = true
