[package]
name = "ferrotunnel-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Common utilities for FerroTunnel"
keywords = ["tunnel", "utilities", "common"]

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
bincode-next = { workspace = true }

[lints]
workspace = true
