[package]
name = "ferrotunnel-observability"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
description = "Observability infrastructure for FerroTunnel (Metrics & Tracing)"
keywords = ["tunnel", "observability", "metrics", "tracing", "opentelemetry"]
categories = ["network-programming"]

[dependencies]
ferrotunnel-common = { version = "0.9.0", path = "../ferrotunnel-common" }
anyhow = { workspace = true }

# Metrics
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

# Tracing & OpenTelemetry
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.26" }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic", "trace"] }

# Async
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = "1"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Request IDs
uuid = { workspace = true }

# Web (for metrics endpoint and dashboard)
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
    "fs",
], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
reqwest = { version = "0.13.1", features = ["json"] }

rust-embed = { version = "8.5", optional = true }
mime_guess = { version = "2.0", optional = true }

[features]
default = []
axum = ["dep:axum"]
dashboard = [
    "axum",
    "dep:tower-http",
    "dep:tokio-stream",
    "dep:rust-embed",
    "dep:mime_guess",
]
