[package]
name = "ferrotunnel-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
http = "1.1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
governor = "0.6"
[dev-dependencies]
tracing-subscriber = "0.3"
