[package]
name = "ferrotunnel-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire protocol for FerroTunnel reverse tunnel"
keywords = ["protocol", "tunnel", "networking"]

[dependencies]
serde = { workspace = true }
bincode-next = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
criterion = { workspace = true }

[[bench]]
name = "codec"
harness = false

[lints]
workspace = true
