[package]
name = "ferrotunnel-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FerroTunnel Server binary"

[dependencies]
ferrotunnel-core = { version = "0.9.0", path = "../ferrotunnel-core" }
ferrotunnel-common = { version = "0.9.0", path = "../ferrotunnel-common" }
ferrotunnel-http = { version = "0.9.0", path = "../ferrotunnel-http" }
ferrotunnel-plugin = { version = "0.9.0", path = "../ferrotunnel-plugin" }
ferrotunnel-observability = { workspace = true, features = ["axum"] }

tokio = { workspace = true }
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
# tracing-subscriber handled by ferrotunnel-observability
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
anyhow = { workspace = true }

[lints]
workspace = true
