[package]
name = "ferrotunnel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A production-ready reverse tunnel system in Rust"
keywords = ["tunnel", "reverse-proxy", "networking", "async"]
categories = ["network-programming", "asynchronous"]

[dependencies]
ferrotunnel-common = { version = "0.7.0", path = "../ferrotunnel-common" }
ferrotunnel-protocol = { version = "0.7.0", path = "../ferrotunnel-protocol" }
ferrotunnel-core = { version = "0.7.0", path = "../ferrotunnel-core" }
ferrotunnel-http = { version = "0.7.0", path = "../ferrotunnel-http" }
ferrotunnel-plugin = { version = "0.7.0", path = "../ferrotunnel-plugin" }

# Re-export commonly used dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
http = "1.4.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rcgen = "0.12"
rustls = { version = "0.23", features = ["ring"] }


[lints]
workspace = true

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
