[package]
name = "ferrotunnel-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

# This crate exists only to run integration tests
[lib]
path = "lib.rs"

[[test]]
name = "integration"
path = "integration/mod.rs"

[dependencies]
# All workspace crates for integration testing
ferrotunnel = { path = "../ferrotunnel" }
ferrotunnel-common = { path = "../ferrotunnel-common" }
ferrotunnel-protocol = { path = "../ferrotunnel-protocol" }
ferrotunnel-core = { path = "../ferrotunnel-core" }
ferrotunnel-http = { path = "../ferrotunnel-http" }
ferrotunnel-plugin = { path = "../ferrotunnel-plugin" }
ferrotunnel-observability = { path = "../ferrotunnel-observability" }

# Testing dependencies
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rcgen = "0.14"
rustls = { version = "0.23", features = ["ring"] }
http = "1.4.0"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = { workspace = true }
tokio-tungstenite = "0.28"
futures-util = "0.3"

[lints]
workspace = true
