[package]
name = "ferrotunnel-soak"
version = "0.6.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
ferrotunnel = { path = "../../ferrotunnel" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

[features]
default = []
